# learn_direct2d_rust

./: .gitignore  Cargo.toml
src/: d2d.rs  graphic.rs  main.rs
