[package]
name = "learn_direct2d_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_System_Com",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage"
]
